[tool.poetry]
name = "trantor-msr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "trantor_msr"}]

[tool.poetry.dependencies]
python = "^3.9.14"
pandas = "^1.5.1"
ipython = "^8.5.0"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
torch = "^1.13.0"
torchvision = "^0.14.0"
pytorch-lightning = "^1.7.7"
pytorch-lightning-bolts = "^0.3.2.post1"
ipykernel = "^6.16.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
black = "^22.10.0"
catboost = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
